initial commit with ADASE Group info

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: ADASE Group at Skoltech, Moscow
+name: Advanced Data Analytics in Science and Engineering group at Skoltech, Moscow
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
