--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,16 +1,19 @@
 - title: "About"
   href: "/about/"
 
-- title: "Blog"
-  href: "/blog/"
+- title: "Group Members"
+  href: "/group/"
 
-- title: "CV"
-  href: "/cv/"
+- title: "Publications"
+  href: "/publications/"
+#  subcategories:
+#    - subtitle: "Item 1"
+#      subhref: "/miscellany/item-1/"
+#    - subtitle: "Item 2"
+#      subhref: "/miscellany/item-2/"
+- title: "Projects"
+  href: "/projects/"
+- title: "For Students"
+  href: "/for_students/"
 
-- title: "Miscellany"
-  href: "/miscellany/"
-  subcategories:
-    - subtitle: "Item 1"
-      subhref: "/miscellany/item-1/"
-    - subtitle: "Item 2"
-      subhref: "/miscellany/item-2/"
+
