--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -11,9 +11,9 @@
 #      subhref: "/miscellany/item-1/"
 #    - subtitle: "Item 2"
 #      subhref: "/miscellany/item-2/"
-- title: "Projects"
-  href: "/projects/"
-- title: "For Students"
-  href: "/for_students/"
+- title: "Academic Projects"
+  href: "/academic_projects/"
+- title: "Industrial Projects"
+  href: "/industrial_projects/"
 
 
