--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,15 @@
 - title: "About"
   href: "/about/"
 
-- title: "Group Members"
-  href: "/group/"
+- title: "Stuff"
+  href: "/stuff/"
+  subcategories:
+    - subtitle: "Researchers"
+      subhref: "/stuff/researchers/"
+    - subtitle: "Ph.D Students"
+      subhref: "/stuff/phd/"
+    - subtitle: "Masters Students"
+      subhref: "/stuff/masters/"
 
 - title: "Publications"
   href: "/publications/"
