changed main title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ADASE Group web site
+title: ADASE Group
 email: adase@skoltech.ru
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
