--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,6 +1,6 @@
-- title: "About"
-  href: "/about/"
-
+#- title: "About"
+#  href: "/about/"
+#
 - title: "Stuff"
   href: "/stuff/"
   subcategories:
@@ -22,5 +22,5 @@
   href: "/academic_projects/"
 - title: "Industrial Projects"
   href: "/industrial_projects/"
-
-
+- title: "Contacts"
+  href: "/contacts/"
