--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -22,5 +22,5 @@
   href: "/academic_projects/"
 - title: "Industrial Projects"
   href: "/industrial_projects/"
-- title: "Contacts"
-  href: "/contacts/"
+- title: "Contact"
+  href: "/contact/"
