--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: ADASE Group
 email: adase@skoltech.ru
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The Advanced Data Analytics in Science and Engineering Group is a research
+  organisation focused on the development of novel machine learning methods
+  with industrial applications.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://adasegroup.github.io" # the base hostname & protocol for your site
 #twitter_username: 
