--- a/new_particle/_config.yml
+++ b/new_particle/_config.yml
@@ -14,7 +14,7 @@ user_description: The Advanced Data Analytics in Science and Engineering Group i
   organisation focused on the development of novel machine learning methods
   with industrial applications based at the Skolkovo Institute of Science and Technology (Skoltech). 
   The group is conformed by a research team consisting of academic experts, doctoral students and developers.
-user_title: Skoltech, Moscow, Russia.
+user_title: Skoltech, Moscow, Russia
 email: anon@anon.com
 twitter_username: lorem_ipsum
 github_username:  lorem_ipsum
