changes to the main page

--- a/new_particle/_config.yml
+++ b/new_particle/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: Advanced Data Analytics in Science and Engineering Group at Skoltech
-description: The Advanced Data Analytics in Science and Engineering Group is a research
+description: >
+  The Advanced Data Analytics in Science and Engineering Group is a research
   organisation focused on the development of novel machine learning methods
   with industrial applications based at the Skolkovo Institute of Science and Technology (Skoltech)
 user_title: Advanced Data Analytics in Science and Engineering Group at Skoltech, Moscow, Russia
@@ -10,7 +11,8 @@ user_title: Advanced Data Analytics in Science and Engineering Group at Skoltech
 # User settings
 username: ADASE
 username_full: Advanced Data Analytics in Science and Engineering Group
-user_description: The Advanced Data Analytics in Science and Engineering Group is a research
+user_description: >
+  The Advanced Data Analytics in Science and Engineering Group is a research
   organisation focused on the development of novel machine learning methods
   with industrial applications based at the Skolkovo Institute of Science and Technology (Skoltech). 
   The group is conformed by a research team consisting of academic experts, doctoral students and developers.
@@ -31,6 +33,8 @@ research_title: Research Agenda
 industry_title: Industry Projects
 teaching_title: Teaching
 group_title: Research Group
+staff_title: Staff
+publications_title: Publications
 
 
 block1_title: Modelling with Surrogate Functions
@@ -41,14 +45,29 @@ block1_description: Prediction systems with kernel methods such as engineering p
 block2_description: Processing 3D data in the areas of computer vision, brain image processing, chemoinformatics.
 block3_description: Processing of online data such as anomaly detection, forecasting, change point detection, time series.
 
-research_description: ADASE is a group of research enthusiasts pushing the state of the art at the intersection of kernel methods 3D data, 
+research_description: >
+  ADASE is a group of research enthusiasts pushing the state of the art at the intersection of kernel methods 3D data, 
   deep learning, online data, and machine learning. Our research mission is to construct data-driven (surrogate) models capable of predicting behavior, 
   performing model-based control and recommend future actions, optimizing design and performance and detecting anomalies and predict failures. Aside from traditional convex and non-convex optimization techniques, 
   we see great potential in modern artificial intelligence, mainly deep learning, 
   in order to achieve these goals. 
-  Keywords - Machine Learning, Engineering Problems, Online Data, Kernel Methods, Gaussian Process, Deep Learning
+  Keywords - Machine Learning, Engineering Problems, Online Data, Kernel Methods, Gaussian Process, Deep Learning.
   
-  # -----------------------------------------------------------------------------
+staff_description: >
+  Since 2016 Evgeny Burnaev works as Associate Professor of Skoltech Center for Computational Data-Intensive Science and Engineering. 
+  Today, Evgeny’s research interests encompass the areas of regression based on Gaussian processes and kernel methods for multi-fidelity surrogate modeling and optimization, 
+  Deep Learning for 3D Data Analysis and manifold learning, on-line sequence learning for prediction and non-parametric anomaly detection. 
+  The main aim is development of new machine learning methods and their use for solution of applied engineering problems.
+
+publications_description: Many publications coming soon
+
+teaching_description: Many courses coming soon
+
+# Resume settings
+resume_avatar: "true"
+
+
+# -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
 #name: Your Name
@@ -88,7 +107,7 @@ text:
     older: 'Older'
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: adase # put your disqus shortname
 
 # Optional features
 show_social_icons:  false
@@ -104,11 +123,17 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
+  lectures:
+    defaults:
+      layout: post
+    output: true
+    permalink: /lectures/:path/
   projects:
     output: true
     permalink: /projects/:path/
-
+    
 news_limit: 5
+lectures_limit: 5
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
