--- a/1others/academic-website/Gemfile
+++ b/1others/academic-website/Gemfile
@@ -1,8 +1,8 @@
 source 'https://rubygems.org'
-group :jekyll_plugins do
-    gem 'github-pages'
-    gem 'jekyll'
-    gem 'jekyll-paginate'
-    gem 'jekyll-scholar'
-    gem 'jemoji'
-end
+plugins:
+  - 'github-pages'
+  - 'jekyll'
+  - 'jekyll-paginate'
+  - 'jekyll-scholar'
+  - 'jemoji'
+
