--- a/new_particle/_config.yml
+++ b/new_particle/_config.yml
@@ -100,6 +100,7 @@ enable_katex:       true
 # -----------------------------------------------------------------------------
 # Collections
 # -----------------------------------------------------------------------------
+collections_dir: _content
 collections:
   news:
     defaults:
