--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ lectures_limit: 5
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 
 # Includes
 include: ['_pages']
