--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -22,5 +22,7 @@
   href: "/academic_projects/"
 - title: "Industrial Projects"
   href: "/industrial_projects/"
+- title: "Openings"
+  href: "/openings/"
 - title: "Contact"
   href: "/contact/"
