--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: "About"
-  href: "/about"
+  href: "/about/"
 #
 - title: "Staff"
-  href: "/staff"
+  href: "/staff/"
   subcategories:
 #    - subtitle: "Researchers"
 #      subhref: "/staff/researchers/"
@@ -12,17 +12,17 @@
 #      subhref: "/staff/masters/"
 
 - title: "Publications"
-  href: "/publications"
+  href: "/publications/"
 #  subcategories:
 #    - subtitle: "Item 1"
 #      subhref: "/miscellany/item-1/"
 #    - subtitle: "Item 2"
 #      subhref: "/miscellany/item-2/"
 - title: "Academic Projects"
-  href: "/academic_projects"
+  href: "/academic-projects/"
 - title: "Industrial Projects"
-  href: "/industrial_projects"
+  href: "/industrial-projects/"
 - title: "Openings"
   href: "/openings/"
 - title: "Contact"
-  href: "/contact"
+  href: "/contact/"
