--- a/_data/nav_bar.yml
+++ b/_data/nav_bar.yml
@@ -13,6 +13,8 @@
 
 - title: "Publications"
   href: "/publications/"
+- title: "Teaching"
+  href: "/teaching/"
 #  subcategories:
 #    - subtitle: "Item 1"
 #      subhref: "/miscellany/item-1/"
