--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -15,6 +15,8 @@
   href: "/publications/"
 - title: "Teaching"
   href: "/teaching/"
+- title: "Collaboration"
+  href: "/collaboration/"
 #  subcategories:
 #    - subtitle: "Item 1"
 #      subhref: "/miscellany/item-1/"
