--- a/_data/nav_bar.yml
+++ b/_data/nav_bar.yml
@@ -15,6 +15,8 @@
   href: "/publications/"
 - title: "Teaching"
   href: "/teaching/"
+- title: "Collaboration"
+  href: "/collaboration/"
 #  subcategories:
 #    - subtitle: "Item 1"
 #      subhref: "/miscellany/item-1/"
@@ -22,7 +24,7 @@
 #      subhref: "/miscellany/item-2/"
 - title: "Academic Projects"
   href: "/academic-projects/"
-- title: "Industrial Projects"
+- title: "Industry"
   href: "/industrial-projects/"
 - title: "Openings"
   href: "/openings/"
