--- a/_data/nav_bar.yml
+++ b/_data/nav_bar.yml
@@ -15,8 +15,8 @@
   href: "/publications/"
 - title: "Teaching"
   href: "/teaching/"
-- title: "Collaboration"
-  href: "/collaboration/"
+- title: "Research Topics"
+  href: "/research-topics/"
 #  subcategories:
 #    - subtitle: "Item 1"
 #      subhref: "/miscellany/item-1/"
