--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ staff_title: Staff
 publications_title: Publications
 contact_title: Contact
 
-
+repository: adasegroup/adasegroup.github.io
 
 block1_title: Modelling of surrogates
 block2_title: Processing of 3D data
