Add 3ddl group photo

--- a/_data/3ddl/data.yml
+++ b/_data/3ddl/data.yml
@@ -1,3 +1,3 @@
 team_home_fancy_announcement:
-  fancy_img: https://i.pinimg.com/originals/a7/5d/4d/a75d4db8f44073fb9c1fcc4b14d4a670.jpg
+  fancy_img: /assets/img/3ddl/group_photo_Sep19.jpg
   url: /3ddl/staff/
