Change the news item about MLSS

--- a/_data/adase/news.yml
+++ b/_data/adase/news.yml
@@ -1,7 +1,7 @@
-- title: Something about MLSS
-  date: 2019-09-06 00:00:00
+- title: Machine learning summer school 2019
+  date: 2019-08-26 00:00:00
   thumbnail: https://static.tildacdn.com/tild6335-3630-4737-b131-383536313836/artwork-vasily-kandi.jpg
-  excerpt: ...
+  excerpt: We are organizing this year's MLSS
   url: https://mlss2019.skoltech.ru/
 
 - title: Reading group started
